# stock_portfolio

./: .gitignore  README.md  main.py  pyproject.toml  setup.py  stock_portfolio_app.py
dialogs/: __init__.py  add_stock_dialog.py  stock_selector_dialog.py  update_stock_dialog.py
utils/: __init__.py  db_utils.py  stock_utils.py
